<resources>
    <string name="app_name">LxPlayer</string>
    <string name="action_settings">设置</string>
    <string name="title_playlist">播放列表</string>
    <string name="menu_playlist_refresh">重建播放列表</string>
    <string name="menu_playlist_add">增加文件</string>
    <string name="menu_playlist_clear">清空列表</string>
    <string name="menu_playlist_save">保存播放列表</string>
    <string name="menu_playlist_delete">删除播放列表</string>
    <string name="title_saved_playlist">已保存的播放列表</string>
    <string name="file_playlist_default_name" formatted="false">播放列表 %s</string>
    <string name="title_enter_name">输入名称</string>
    <string name="msg_save_playlist_fail_exists">保存播放列表失败：\n该名称已存在。</string>
    <string name="msg_save_playlist_fail_invalid_char">保存播放列表失败：\n非法字符。</string>
    <string name="msg_save_playlist_fail">保存播放列表失败。</string>
    <string name="msg_cannot_be_empty">不能为空。</string>
    <string name="msg_warning_replace_playlist">替换当前播放列表？</string>
    <string name="menu_playlist_pop_delete">从列表中移除</string>
    <string name="menu_playlist_deleteChosen">移除选定项目</string>
    <string name="menu_playlist_choose">选择多项</string>
    <string name="option_loop_on">单曲循环</string>
    <string name="option_loop_off">无循环</string>
    <string name="option_random_off">顺序播放</string>
    <string name="option_random_on">随机播放</string>
    <string name="button_play">播放</string>
    <string name="button_pause">暂停</string>
    <string name="button_backward">上一曲</string>
    <string name="button_forward">下一曲</string>
    <string name="label_playing">正在播放：</string>
    <string name="label_stopped">请选择文件</string>
    <string name="label_playtime" formatted="false">%d:%02d/%d:%02d</string>
    <string name="menu_main_stop">停止播放</string>
    <string name="menu_main_about">帮助</string>
    <string name="message_about" formatted="false">这是一个简易的音乐播放器。\n*
        该程序只能在安卓6.0及以上系统中安装。\n\n线控说明：\n连按两下为切换下一曲，连按三下为切换上一曲，单击为播放/暂停。\n\n制作：lxfly2000\n版本：%s\n发布日期：%s\n程序源码：%s
    </string>
    <string name="url_author">https://github.com/lxfly2000/lxplayer</string>
    <string name="button_visitUrl">访问网站</string>
    <string name="menu_main_speedUp">加速</string>
    <string name="menu_main_speedDown">减速</string>
    <string name="message_error_apilevel">该功能要求安卓版本至少为6.0.</string>
    <string name="message_indebug">程序以调试模式运行。</string>
    <string name="menu_exitApp">关闭程序</string>
    <string name="message_error_randomOnLoop">循环开启时无效。</string>
    <string name="message_unknownOperation">未知操作。</string>
    <string name="message_error_permission_exstorage">无法查询文件信息，请检查应用是否有读取外置存储卡或媒体文件的权限。</string>
    <string name="message_error_permission_notify">无法发送通知，这会导致状态栏的控制功能不可用。</string>
    <string name="title_chooseFile">选择文件</string>
    <string name="message_no_filechooser">没有可用的文件浏览器。</string>
    <string name="message_cannot_catchFilepath">未获取到文件，请选择其他浏览器。</string>
    <string name="message_file_exists">播放列表中已经有该文件了。</string>
    <string name="menu_keep_speed">切换时保持速度(%.1fx)</string>
    <string name="app_identifier">lxplayer</string>
    <string name="menu_check_update">检查更新</string>
    <string name="message_new_version" formatted="false">检测到新版本，是否更新？\n当前版本：%s\n新版本：%s</string>
    <string name="message_no_update">当前版本已是最新。</string>
    <string name="error_check_update">无法检查更新，可能是网络有问题或目标服务器已更改。</string>
    <string name="url_check_update">https://raw.githubusercontent.com/lxfly2000/lxplayer/master/app/build.gradle
    </string>
    <string name="error_permission_network">未获取到联网权限，请修改权限设置。</string>
    <string name="label_enable_line_control">启用线控</string>
    <string name="message_settings_saved">设置已保存。</string>
    <string name="menu_custom_playback_speed">调整速度</string>
    <string name="button_restore_speed">恢复原速</string>
    <string name="menu_change_speed_keep_time">调整速度时保持时长</string>
    <string name="menu_change_speed_keep_pitch">调整速度时保持音调</string>
    <string name="key_enable_line_control" translatable="false">enable_line_control</string>
    <string name="menu_playlist_add_dir">添加目录</string>
    <string name="message_add_count">已添加%d个文件。</string>
</resources>
