<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="io.github.lxfly2000.lxplayer.MainActivity">
    <item android:id="@+id/action_goto_playlist"
          android:title="@string/title_playlist"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_stop"
          android:title="@string/menu_main_stop"
          android:orderInCategory="101"
          app:showAsAction="never"/>
    <item android:id="@+id/action_speedUp"
          android:title="@string/menu_main_speedUp"
          android:orderInCategory="102"
          app:showAsAction="never"/>
    <item android:id="@+id/action_speedDown"
          android:title="@string/menu_main_speedDown"
          android:orderInCategory="103"
          app:showAsAction="never"/>
    <item android:title="@string/menu_custom_playback_speed" android:orderInCategory="104"
          android:id="@+id/action_set_speed"/>
    <item android:title="@string/menu_change_speed_keep_time" android:orderInCategory="105"
          android:id="@+id/action_change_speed_keep_time" android:checkable="true"/>
    <item android:id="@+id/action_keep_speed"
          android:title="@string/menu_keep_speed"
          android:orderInCategory="107"
          android:checkable="true"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/menu_main_about"
          android:orderInCategory="108"
          app:showAsAction="never"/>
    <item android:title="@string/action_settings" android:orderInCategory="109" android:id="@+id/action_settings"/>
    <item android:id="@+id/action_check_update"
          android:title="@string/menu_check_update"
          android:orderInCategory="109"
          app:showAsAction="never"/>
    <item android:id="@+id/action_exitApp"
          android:title="@string/menu_exitApp"
          android:orderInCategory="110"
          app:showAsAction="never"/>
    <item android:title="@string/menu_change_speed_keep_pitch" android:orderInCategory="106"
          android:id="@+id/action_change_speed_keep_pitch" android:checkable="true"/>
</menu>
