<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="io.github.lxfly2000.lxplayer.MainActivity">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_stopped"
                    android:id="@+id/textViewTitle" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
            <ImageView
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:id="@+id/imageView" android:layout_below="@+id/textViewTitle" android:layout_centerHorizontal="true"
                    android:contentDescription="@string/label_playing"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true" android:id="@+id/layoutPlaytime">
                <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_playtime"
                        android:id="@+id/textViewTime"
                        android:layout_weight="0"/>
            </LinearLayout>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButtonPlay" android:layout_below="@+id/layoutPlaytime"
                    android:layout_centerHorizontal="true" android:src="@android:drawable/ic_media_play"
                    android:contentDescription="@string/button_play"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButtonBackward" android:layout_below="@+id/layoutPlaytime"
                    android:layout_alignParentStart="true" android:src="@android:drawable/ic_media_previous"
                    android:contentDescription="@string/button_backward"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButtonForward" android:layout_below="@+id/layoutPlaytime"
                    android:layout_alignParentEnd="true" android:src="@android:drawable/ic_media_next"
                    android:contentDescription="@string/button_forward"/>
        </RelativeLayout>
    </ScrollView>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleLoop" android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" android:textOn="@string/option_loop_on"
            android:textOff="@string/option_loop_off"/>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleRandom" android:layout_alignBottom="@+id/toggleLoop"
            android:layout_toEndOf="@+id/toggleLoop" android:textOff="@string/option_random_off"
            android:textOn="@string/option_random_on"/>
</RelativeLayout>
